@@ -189,9 +189,10 @@ static Image *ReadVIDImage(const ImageInfo *image_info,ExceptionInfo *exception)
           }
       }
     (void) SetMonitorHandler(handler);
-    if (!MagickMonitorFormatted(i,number_files,&image->exception,
-                                LoadImageText,image->filename,
-				image->columns,image->rows))
+    if (image != (Image *) NULL)
+      if (!MagickMonitorFormatted(i,number_files,&image->exception,
+                                  LoadImageText,image->filename,
+                                  image->columns,image->rows))
       break;
   }
   DestroyImageInfo(clone_info);
